--- a/_data/json.yml
+++ b/_data/json.yml
@@ -1,1 +1,9 @@
 # empty
+- key: Name
+  value: 蒼璃
+- key: GitHub
+  value: s0raLin
+  url: https://github.com/s0raLin
+- key: blog
+  value: blog
+  url: /
