--- a/_data/json.yml
+++ b/_data/json.yml
@@ -1,1 +1,10 @@
-# empty
+key: zoozine
+value: tidbits for the busy zoologist
+
+key: check this out
+value:
+  value: what is a zine?
+  url: https://en.wikipedia.org/wiki/Zine
+  value: a brief history of zines and why you should make one
+  url: https://staples-alanna.medium.com/a-brief-history-of-zines-and-why-you-should-make-one-f362b30e6d67
+  value: ubc's indigenous new media zine site
